rt/test/errors/006/test.volt
//T compiles:no
module test;

@mangledname("llvm.floor.f64") fn floor();
